--- a/FIFA_20_final.ipynb
+++ b/FIFA_20_final.ipynb
@@ -27,7 +27,7 @@
         "id": "ce2aa35c"
       },
       "source": [
-        "Football is one of the popular sports in the world.The aim of football is to score more goals than your opponent in a\n",
+        "**Football** game is one of the popular sports in the world.The aim of football is to score more goals than your opponent in a\n",
         "90 minute playing time frame. Each team consists of 11 players. These are made up of one goalkeeper and ten outfield players.\n",
         "Players must use their feet to kick the ball and are prohibited to use their hands apart from goalkeepers who can use any part\n",
         "of their body within the 18 yard box.\n",
